# LinuxMacroKeyboard

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
include/: KeyDefs.h  KeyMap.h  KeyTable.h  Keyboard.h  VirtualKeyboard.h
src/: Entrypoint.cpp  KeyMap.cpp  KeyTable.cpp  Keyboard.cpp  VirtualKeyboard.cpp
