CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(macro VERSION 0.1.0)

FILE(GLOB Source ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

ADD_EXECUTABLE(macro ${Source})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include())

#ADD_CUSTOM_COMMAND(TARGET macro POST_BUILD
#        COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/keymaps $<TARGET_FILE_DIR:macro>/keymaps
#)